hack fix of collapse panel. Tested on all browsers

--- a/alv-portal-ui/src/app/shared/layout/collapse-panel/collapse-panel.component.scss
+++ b/alv-portal-ui/src/app/shared/layout/collapse-panel/collapse-panel.component.scss
@@ -37,8 +37,10 @@ button.collapse-button {
     }
   }
 }
+// see the explanation of what's going on here in the component ts file
 .panel-content {
-  padding: 0.5em 0;
   display: block;
   transform-origin: top;
+  min-height: 0;
+  overflow:hidden;
 }
